# MrV

./: .gitignore  INTERFACE_MODE_SYSTEM.md  MULTI_AGENT_IMPLEMENTATION.md  PROJECT_SUMMARY.md  Package.swift  QUICKSTART_INTERFACE_MODES.md  QUICK_START.md  README.md  RECOVERY_STATUS.md  TEST_REPORT.md  XCODE_SETUP.md  create-xcode-project.sh  open-in-xcode.sh  run-tests.swift  test-multi-agent.swift
MrVAgent/: Info.plist  MrVAgent.entitlements  MrVAgentApp.swift
MrVAgent/Abstraction/: AbstractionEngine.swift
MrVAgent/Agents/: AgentFactory.swift  AgentOrchestrator.swift  BaseAgent.swift  (+1 more)
backend/: .env.example  .gitignore  ARCHITECTURE.md  README.md  VALIDATION.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
backend/src/: __init__.py
backend/src/agents/: graph.py  state.py
backend/src/agents/council/: __init__.py  council_manager.py  historian.py  optimist.py  pessimist.py  synthesizer.py
backend/src/agents/nodes/: __init__.py  ambiguity_scanner.py  kpi_fabricator.py  ontology_architect.py  socratic_interrogator.py
backend/src/api/: main.py
backend/src/api/routes/: agent.py
backend/src/core/: config.py
backend/src/memory/: graph_store.py  hybrid_memory.py  vector_store.py
backend/src/ontology/: __init__.py  schema_generator.py
backend/src/routing/: model_router.py
backend/tests/: test_ambiguity_scanner.py  test_api.py  test_config.py  test_council.py  test_graph_state.py  test_graph_store.py  test_hybrid_memory.py  test_kpi_fabricator.py  test_model_router.py  test_ontology_architect.py  test_socratic_interrogator.py
(+66 files in other folders)
